--- a/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
+++ b/Romanian/main/CleanMaster.apk/res/values-ro/strings.xml
@@ -27,6 +27,7 @@
     <string name="activity_title_white_list">Excepţii</string>
     <string name="ad_install_success_dialog_lunch">Deschideți</string>
     <string name="ad_install_success_dialog_title">%1$s a fost instalată cu succes. O deschideți acum?</string>
+    <string name="analying">Analizare…</string>
     <string name="apk_status_damage">Deteriorat</string>
     <string name="apk_status_duplicate">Duplicat</string>
     <string name="apk_status_install">Instalat</string>
@@ -144,6 +145,8 @@
     <string name="deepclean_video_content">Ștergeți videoclipurile vizionate deja sau pe cele inutile</string>
     <string name="deepclean_video_summary_empty">Totul arată bine</string>
     <string name="default_cache_type">Fişiere de date</string>
+    <string name="delete_confirm">Ștergeți</string>
+    <string name="delete_confirm_msg">Ștergeți definitiv fișierele selectate?</string>
     <string name="dialog_content_checkbox_delete_cloud_image">Se şterg, de asemenea, fotografiile din Mi Cloud</string>
     <string name="dialog_content_select_all_confirm">Păstrați o copie a acestei fotografii?</string>
     <string name="dialog_msg_add_white_list_error">"Fișierul nu poate fi adăugat la excepții"</string>
@@ -178,6 +181,7 @@
     <string name="empty_title_photos">Nicio fotografie găsită</string>
     <string name="empty_title_residual">Niciun reziduu</string>
     <string name="empty_title_video">Nu există videoclipuri ce trebuie șterse​</string>
+    <string name="file">Fișiere</string>
     <string name="flow_rank_title">Utilizare date</string>
     <string name="function_app_lock_title">%d aplicații cu risc de încălcare a confidențialității​</string>
     <string name="garbage_clean_detail">Detalii</string>
@@ -264,6 +268,7 @@
     <string name="label_preserve_the_best_image">Păstrați fotografiile cele mai bune</string>
     <string name="last_check_canceled">Scanarea precedentă a fost anulată</string>
     <string name="load_only_under_wlan">Încarcă doar în Wi-Fi</string>
+    <string name="location_not_found">"Nu s-a putut găsi fișierul"</string>
     <string name="login_immediately">Conectare</string>
     <string name="long_click_dialog_summary">Apăsați lung pentru a adăuga în lista de excepții.</string>
     <string name="long_click_dialog_title">Aviz</string>
@@ -303,8 +308,10 @@
     <string name="open">Porniți</string>
     <string name="open_app">Lansați</string>
     <string name="open_browser">Deschideți în browser</string>
+    <string name="open_file_error">"Nu s-a putut găsi aplicația care să deschidă acest fișier"</string>
     <string name="optimizecenter_data_support_cm">Oferit de Clean Master</string>
     <string name="optimizecenter_data_support_tc">Oferit de Tencent</string>
+    <string name="output_videos">Videoclipuri exportate</string>
     <string name="petabyteShort">PB</string>
     <string name="phone_search">Căutare Google</string>
     <string name="positive_confirm">OK</string>
@@ -438,6 +445,36 @@
     <string name="update_date_format">dd/MM/yyyy</string>
     <string name="virus_scan">Scanare pentru viruși</string>
   <string name="vungle_ad_name">ad-Vungle</string>
+    <string name="wechat_cache_files">Cache WeChat</string>
+    <string name="wechat_chat_clean_done">Totul arată bine</string>
+    <string name="wechat_chat_data_type_cache">Cache WeChat</string>
+    <string name="wechat_chat_data_type_cache_desc">"Veți putea restaura aceste fișiere după ce vă veți conecta la internet."</string>
+    <string name="wechat_chat_data_type_chat">Istoric chat</string>
+    <string name="wechat_chat_data_type_chat_desc">"Nu veți mai putea restaura istoricul chat-ului."</string>
+    <string name="wechat_chat_data_type_normal">Gunoi</string>
+    <string name="wechat_chat_data_type_normal_clean_tips">"Acestea sunt fișiere tehnice. Eliminarea lor nu va afecta modul dvs. de utilizare."</string>
+    <string name="wechat_chat_data_type_normal_desc">"Eliminarea lor nu va afecta modul dvs. de utilizare."</string>
+    <string name="wechat_chat_data_type_other">Altele</string>
+    <string name="wechat_chat_data_type_other_desc">Atenție, nu veți mai putea restaura aceste fișiere după ce le veți elimina.</string>
+    <string name="wechat_chat_files">Istoric chat</string>
+    <string name="wechat_clean">Curățare WeChat</string>
+    <string name="wechat_clean_downloads">Fișiere primite</string>
+    <string name="wechat_clean_downloads_desc">Fișiere primite prin WeChat</string>
+    <string name="wechat_clean_exit_confirm">Ieșiți?</string>
+    <string name="wechat_clean_exit_confirm_msg">Opriți scanarea și ieșiți acum?</string>
+    <string name="wechat_clean_stop_confirm">Opriți scanarea?</string>
+    <string name="wechat_clean_stop_confirm_msg">Opriți scanarea acum?</string>
+    <string name="wechat_content_bad_pic_file">Fișierul este corupt</string>
+    <string name="wechat_content_empty">Niciun fișier de exportat</string>
+    <string name="wechat_copy_to_gallery">Exportați în Galerie</string>
+    <string name="wechat_copy_video_failed_dialog_title">"Nu s-a putut exporta"</string>
+    <string name="wechat_copying_video">Exportare…</string>
+    <string name="wechat_copying_video_dialog_checkbox">Ștergeți fișierele după exportare</string>
+    <string name="wechat_copying_video_dialog_msg">Fișierele vor fi salvate în dosarul: /DCIM/WeChat</string>
+    <string name="wechat_copying_video_dialog_title">Exportați în Galerie</string>
+    <string name="wechat_copying_video_empty">Niciun videoclip de exportat</string>
+    <string name="wechat_copying_video_success">Exportat cu succes</string>
+    <string name="wechat_normal_files">Gunoi</string>
     <string name="white_list_ad_header">Fișiere inutile: %d</string>
     <string name="white_list_apk_header">Pachete de instalare: %d</string>
     <string name="white_list_cache_header">Fişiere cache: %d</string>
