--- a/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
+++ b/Romanian/main/DeskClock.apk/res/values-ro/strings.xml
@@ -14,10 +14,12 @@
     <string name="alarm_notify_text">Amânaţi sau anulaţi alarma</string>
     <string name="alarm_repeat">Repetare</string>
     <string name="alarm_settings">Setări alarmă</string>
+    <string name="alarm_settings_category_title">Setări alarmă</string>
     <string name="alarm_vibrate">Vibrare</string>
     <string name="alarm_volume_summary">Setaţi volumul alarmei</string>
     <string name="alarm_volume_title">Volum alarmă</string>
     <string name="alarmclock_empty_text">Nicio alarmă</string>
+    <string name="alarmclock_silent_hint">Alarma este în modul silențios</string>
     <string name="alert">Ton de apel</string>
     <string name="analog_gadget">Ceas analogic</string>
     <string name="app_label">Ceas</string>
@@ -35,8 +37,8 @@
     <string name="day">1 zi</string>
     <string name="day_concat">", "</string>
     <string name="days">%s zile</string>
-    <string name="default_alarm_alert">Setaţi sunetul prestabilit al alarmei</string>
-    <string name="default_alarm_title">Ton sonerie prestabilit</string>
+    <string name="default_alarm_alert">Sunetul prestabilit al alarmei</string>
+    <string name="default_alarm_title">Tonul de sonerie prestabilit</string>
     <string name="default_label">Alarmă</string>
     <string name="delete">Ştergeţi</string>
     <string name="delete_alarm">Ştergeţi alarma</string>
@@ -67,6 +69,23 @@
     <string name="legal_workday_invalidate">Date expirate (în prezent, alarma sună de Luni până Vineri)</string>
     <string name="legal_workday_invalidate_message">(Date expirate. Actualizaţi în Setări)</string>
     <string name="legal_workday_message">" (Alarmă dezactivată în zilele de sărbătoare)"</string>
+  <string name="life_post_setting">Life post</string>
+    <string name="life_post_setting_open_subtitle">Arată starea vremii și informații despre trezire după ce se oprește alarma între orele 4:00-9:30</string>
+  <string name="life_post_setting_open_title">Open life post</string>
+    <string name="life_post_setting_wake_up_list_title">Istoricul de trezire</string>
+    <string name="life_post_wake_up_acumu_day_title">Contor zile</string>
+    <string name="life_post_wake_up_item_acumu_day">%1$s zile</string>
+    <string name="life_post_wake_up_item_acumu_day_title">Acumulați zile</string>
+    <string name="life_post_wake_up_item_percentage_title">Întreceți fanii Mi</string>
+    <string name="life_post_wake_up_item_time_title">Ora de trezire</string>
+    <string name="life_post_wake_up_percentage_sign">%</string>
+    <string name="life_post_wake_up_percentage_title">Astăzi ați întrecut</string>
+    <string name="life_post_wake_up_time_title">Ora de trezire</string>
+    <string name="life_post_weather_degree_invalid">--</string>
+    <string name="life_post_weather_description">%1$s, %2$s, %3$s</string>
+    <string name="life_post_weather_description_secondary">%1$s,%2$s,%3$s</string>
+    <string name="life_post_weather_invalid">Starea vremii trebuie actualizată</string>
+    <string name="life_post_weather_temperature_centigrade">°C</string>
     <string name="loading_ringtone">Se încarcă tonul soneriei…</string>
     <string name="menu_add_worldclock">Adăugaţi un fus orar</string>
     <string name="menu_desk_clock">Ceas</string>
@@ -76,10 +95,11 @@
     <string name="menu_item_sort_by_name">Sortaţi după nume</string>
     <string name="minute">1 minut</string>
     <string name="minutes">%s minute</string>
-    <string name="more_settings">Mai multe setări</string>
+    <string name="more_settings">Setări</string>
     <string name="never">O dată</string>
     <string name="oneshot_alarm">Ștergeți după ce expiră</string>
     <string name="pause">Pauză</string>
+    <string name="percentage_sign">%</string>
     <string name="remind_ringtone">Ton de apel</string>
     <string name="reset">Resetaţi</string>
     <string name="revert">Reveniţi</string>
@@ -113,6 +133,8 @@
     <string name="stopwatch_title">Cronometru</string>
     <string name="symbol_colon">:</string>
     <string name="system_time_setting">Setări</string>
+    <string name="system_time_settings_category_title">Setări pentru oră</string>
+    <string name="temperature_unit">%1$s°C</string>
     <string name="time">Ora</string>
     <string name="timer_alarm_alert_pad">%s</string>
     <string name="timer_alarm_cancel_pad">Atingeţi ecranul pentru a opri soneria</string>
