--- a/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiGallery.apk/res/values-ro/strings.xml
@@ -47,8 +47,10 @@
     <string name="album_detail_clear_local_page_empty">Nu există fotografii sau videoclipuri sincronizate care să fie șterse</string>
     <string name="album_detail_page_empty">Nu există fotografii sau videoclipuri</string>
     <string name="album_faces_name">Persoane</string>
+    <string name="album_from_format">Din %s</string>
     <string name="album_member">Membri album %s</string>
     <string name="album_name">Nume album</string>
+    <string name="album_name_recent_discovery">Recente</string>
     <string name="album_others_share_baby_info_format">Albumul copilului din %s</string>
     <string name="album_others_share_info_format">Din %s</string>
     <string name="album_owner_share">Partajările mele</string>
@@ -81,6 +83,7 @@
     <string name="all_items_synced">Toate albumele au fost sincronizate în Mi Cloud</string>
     <string name="all_video_album_display_name">Toate videoclipurile</string>
     <string name="already_create_baby_album">Albumul copilului există deja în Mi Cloud.</string>
+    <string name="and"> și </string>
     <string name="app_name">Galerie</string>
     <string name="app_name_view_picture">Vizualizare imagini</string>
     <string name="app_name_view_video">Vizualizare videoclipuri</string>
@@ -123,11 +126,46 @@
     <string name="baby_suffix">copil</string>
     <string name="backup_automatically_summary">Salvați toate fotografiile și videoclipurile de pe toate dispozitivele în MiCloud. Le puteți vedea, sorta, edita și partaja pe toate dispozitivele.</string>
     <string name="backup_automatically_title">Salvare automată</string>
+    <string name="backup_battery_low_desc">Puteți alege să continuați sincronizarea elementelor</string>
+    <string name="backup_battery_low_title">Sincronizarea a fost dezactivată datorită nivelului redus al acumulatorului</string>
+    <string name="backup_cloud_space_low_btn_text">Obțineți mai mult</string>
+    <string name="backup_cloud_space_low_desc">%1$s în Mi Cloud | Disponibil %2$s</string>
+    <string name="backup_cloud_space_low_title">Nu există suficient spațiu de stocare în Mi Cloud</string>
+    <string name="backup_cta_not_allow">"Nu s-a putut accesa rețeaua"</string>
+    <string name="backup_cta_not_allow_btn_text">Permiteți</string>
     <string name="backup_detail_page_title">Sincronizări Mi Cloud</string>
+    <string name="backup_device_space_low_btn_text">Goliți</string>
+    <string name="backup_device_space_low_desc">Eliberați spațiu pentru a continua sincronizarea elementelor</string>
+    <string name="backup_device_space_low_title">Spațiu de stocare insuficient</string>
+    <string name="backup_dirty_num">Total: %s</string>
+    <string name="backup_dirty_tip">Fotografiile și videoclipurile nu s-au sincronizat</string>
+    <string name="backup_immediately">Sincronizați</string>
+    <string name="backup_need_sync_desc">Atingeți butonul pentru a continua sincronizarea</string>
+    <string name="backup_need_sync_title">Sincronizare oprită</string>
+    <string name="backup_no_network_btn_text">Setări de rețea</string>
+    <string name="backup_no_network_desc">Conectați-vă la rețea pentru a continua sincronizarea elementelor</string>
+    <string name="backup_no_network_title">"Nu s-a putut conecta la Mi Cloud"</string>
+    <string name="backup_no_wifi_btn_text">Utilizare date mobile</string>
+    <string name="backup_no_wifi_desc">Puteți sincroniza elementele și prin date mobile</string>
+    <string name="backup_no_wifi_title">Atingeți pentru a vă conecta la Wi-Fi</string>
     <string name="backup_only_in_wifi">Salvați fotografiile și videoclipurile doar dacă sunteți conectat la Wi-Fi</string>
     <string name="backup_only_in_wifi_summary">Nu se utilizează conexiunea de date mobile pentru salvarea fotografiilor și a videoclipurilor</string>
-    <string name="backup_waiting_button_text">Sincronizați acum</string>
-    <string name="backuping">Se sincronizează %1$d/%2$d</string>
+    <string name="backup_pause">Opriți sincronizarea</string>
+    <string name="backup_pending">Se vor sincroniza în mod automat</string>
+    <string name="backup_stop">Opriți sincronizarea</string>
+    <string name="backup_sync_error_btn_text">Încercați din nou</string>
+    <string name="backup_sync_error_desc">"Nu se poate conecta la Mi Cloud"</string>
+    <string name="backup_sync_error_title">"Nu s-au putut sincroniza elementele"</string>
+    <string name="backup_sync_off_btn_text">Activați</string>
+    <string name="backup_sync_off_desc">Activați sincronizarea cu Mi Cloud pentru a vă salva fotografiile și videoclipurile</string>
+    <string name="backup_sync_off_title">Sincronizarea cu Mi Cloud este oprită</string>
+    <string name="backup_with_gprs_dialog_btn">Sincronizați</string>
+    <string name="backup_with_gprs_dialog_message">%s date sunt necesare pentru a sincroniza elementele. Sincronizați acum?</string>
+    <string name="backup_with_gprs_dialog_title">Sincronizare prin date mobile</string>
+    <string name="backuped_desc">Fotografiile și videoclipurile sunt sincronizate cu Mi Cloud</string>
+    <string name="backuped_title">Sincronizate cu succes</string>
+    <string name="backuping_title_gprs">Sincronizare utilizând datele mobile…</string>
+    <string name="backuping_title_normal">Sincronizați⤦</string>
     <string name="begin_share">S-a creat albumul copilului \"%s\", partajați-l chiar acum</string>
     <string name="begin_share_toast">Creați separat un Album al Copilului înainte de a-l partaja?</string>
     <string name="blank_app_name"/>
@@ -162,7 +200,15 @@
     <string name="cloud_guide_welcome_title">Mi Cloud</string>
     <string name="cloud_screenshots_display_name">Capturi de ecran</string>
     <string name="cloud_settings">Copii de rezervă pentru Galerie</string>
-    <string name="cloud_space_full_button_text">Obțineți mai mult spațiu de stocare</string>
+    <string name="cloud_storage_ok_append_desc">Disponibil %s</string>
+    <string name="cloud_storage_ok_desc">Spațiu de stocare Mi Cloud %s</string>
+    <string name="cloud_storage_ok_title">Spațiu de stocare suficient în Mi Cloud</string>
+    <string name="cloud_storage_photo_title">Fotografii</string>
+    <string name="cloud_storage_subtitle">Toate elementele sunt sincronizate în Mi Cloud</string>
+    <string name="cloud_storage_title">Spațiu de stocare Mi Cloud</string>
+    <string name="cloud_storage_video_title">Videoclipuri</string>
+    <string name="cloud_storage_warn_desc">Achiziționați pachetul VIP pentru a beneficia de spațiu de stocare suplimentar</string>
+    <string name="cloud_storage_warn_title">Spațiu de stocare insuficient în Mi Cloud</string>
     <string name="cloudfolder_cannot_start_with">"Numele dosarului nu poate începe cu '%s'"</string>
     <string name="cloudfolder_contain_invalidate_char">"Numele dosarului nu poate conţine '%s'"</string>
     <string name="cloudfolder_name_cannot_empty">Introduceţi numele albumului</string>
@@ -240,6 +286,7 @@
     <string name="doodle_mosaic">Mozaic</string>
     <string name="doodle_small_size">Mic</string>
     <string name="doodle_super_big_size">Uriaș</string>
+    <string name="double_tap_to_higher_definition">Atingeți din nou de 2 ori pentru previzualizarea HD</string>
     <string name="download_canceled">Descărcarea a fost întreruptă</string>
     <string name="download_retry_message">"Nu s-au putut descărca fișierele; verificați conexiunea la rețea și reîncercați."</string>
     <string name="download_retry_text">Încercați din nou</string>
@@ -250,6 +297,7 @@
     <string name="download_without_wifi_title">Avertizare utilizare date</string>
     <string name="edit_baby_info">Vizualizaţi informaţiile despre copil</string>
     <string name="email_picker_title">Adăugaţi un e-mail distribuit</string>
+    <string name="empty_query_text_msg">"Nu știu ce să caut…"</string>
     <string name="empty_recommend_back">Înapoi</string>
     <string name="empty_recommend_face_page_view">Nu mai există recomandări</string>
     <string name="enable_auto_upload_tip">Acest album va fi eliminat din  \"Alte albume\" după activare.</string>
@@ -374,6 +422,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="invite_sharer_title">Invitaţi %1$s %2$s</string>
     <string name="invite_tip">Distribuiţi fotografiile copilului dvs.</string>
     <string name="is">Da</string>
+    <string name="is_higher_definition">Previzualizare HD</string>
     <string name="kick_owner_user_positive_button_text">Eliminaţi</string>
     <string name="kick_owner_user_title">Eliminați această persoană?</string>
     <string name="kick_sharer">Eliminaţi un destinatar</string>
@@ -394,7 +443,6 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="loading_suspend">Descărcare întreruptă. Acţiunea va fi reluată atunci când Wi-Fi va fi disponibil.</string>
     <string name="loading_video">Descărcare videoclip…</string>
     <string name="loading_video_thumbnail">Descărcare copertă videoclip…</string>
-    <string name="local_space_full_button_text">Eliberați spațiu de stocare</string>
     <string name="login_and_enable_service">Conectați-vă utilizând contul Mi</string>
     <string name="long_press_to_refocus">Atingeți și mențineți apăsat pentru a reorienta</string>
     <string name="main_discard_confirm_message">Există modificări nesalvate</string>
@@ -416,13 +464,12 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="more_face_album_name">Mai multe persoane</string>
     <string name="move_to_other_albums_tip">Sincronizarea cu Mi Cloud va fi oprită dacă veți muta acest album în lista Alte albume. Îl mutați acum?</string>
     <string name="must_pick_file">Selectaţi o fotografie</string>
-    <string name="name_split">,</string>
+    <string name="name_split">, </string>
     <string name="need_to_turn_on_network">Nu aveţi o conexiune la internet</string>
     <string name="need_to_turn_on_sync">Activaţi sincronizarea cu Mi Cloud</string>
     <string name="need_to_turn_on_sync_first">Activaţi sincronizarea cu Mi Cloud mai întâi</string>
     <string name="need_to_turn_on_wlan">Conectaţi-vă la Wi-Fi mai întâi</string>
     <string name="network_connected_rescan">Nu se poate conecta la reţea</string>
-    <string name="network_unsatisfied_button_text">Conectați-vă la rețea</string>
     <string name="new_album_invalid_char">"Numele albumului nu poate conține \"%s\"; introduceți doar litere sau cifre."</string>
     <string name="new_album_invalid_name">\"%s\" este un album de sistem; redenumiți-l.</string>
     <string name="new_album_invalid_prefix">"Nu folosiți \".\" or \"_\" la începutul numelui albumului."</string>
@@ -434,6 +481,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="not_is">Nu</string>
     <string name="not_remind_again">"Nu arăta din nou"</string>
     <string name="not_remind_any_more">Nu se afişează din nou</string>
+    <string name="ok">OK</string>
     <string name="open">Activaţi</string>
     <string name="open_public_message">Generaţi un URL pentru a-l distribui prietenilor</string>
     <string name="open_public_title">Distribuiţi public</string>
@@ -478,6 +526,7 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="owner_album_subtitle">Distribuit către %1$s persoane</string>
     <string name="people_page_label">Persoane</string>
     <string name="people_page_unname">Fără nume</string>
+    <string name="percent_sign">%</string>
     <string name="pet_album_display_name">Fotografiile animalelor de companie</string>
     <string name="petabyteShort">PB</string>
     <string name="photo">Fotografii</string>
@@ -559,12 +608,40 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="scan_barcode_guide">Pentru a obţine codul QR, atingeţi pictograma Distribuire.</string>
     <string name="scan_barcode_to_join">Scanaţi un cod QR pentru a adăuga un album</string>
     <string name="scan_qr_code_buttom_text">Scanaţi codul QR pentru a vizualiza acest album</string>
+    <string name="search_album_jump_failed">Așteptați până când albumele sunt sincronizate în Mi Cloud și reîncercați</string>
+    <string name="search_backup_full_screen">Activați sincronizarea cu Mi Cloud pentru a găsi mai multe persoane și obiecte</string>
+    <string name="search_backup_now">Activați</string>
+    <string name="search_backup_sub_title">Activați pentru a găsi mai multe imagini</string>
+    <string name="search_backup_title">Sincronizate în Mi Cloud</string>
+    <string name="search_connection_error">"Nu s-a putut conecta la rețea"</string>
+    <string name="search_connection_error_and_set">Atingeți pentru a verifica setările de rețea</string>
+    <string name="search_error">A apărut o eroare</string>
+    <string name="search_error_and_retry">A apărut o eroare, atingeți pentru a încerca din nou</string>
+    <string name="search_hint">Căutați imagini​</string>
+    <string name="search_image_result_title">Căutați rezultate</string>
+    <string name="search_load_complete">Nu mai există alte elemente aici</string>
+    <string name="search_load_failed">"Nu s-au putut încărca informațiile, atingeți pentru a încerca din nou"</string>
+    <string name="search_loading">Doar o secundă</string>
+    <string name="search_loading_dots">Doar o secundă…</string>
+    <string name="search_login_now">Conectați-vă</string>
+    <string name="search_login_sub_title">Conectați-vă pentru a găsi mai multe fotografii</string>
+    <string name="search_login_title">Cont Mi</string>
+    <string name="search_login_title_full_screen">Conectați-vă la contul Mi pentru a găsi mai multe persoane și obiecte</string>
+    <string name="search_people_jump_failed">Așteptați până când fotografiile persoanelor sunt sincronizate în Mi Cloud și încercați din nou</string>
+    <string name="search_result_empty">"Nu s-a găsit nimic"</string>
+    <string name="search_retry">Încercați din nou</string>
+    <string name="search_set_network_connection">Setări de rețea</string>
+    <string name="search_title_location">Locații</string>
+    <string name="search_title_others">Toate rezultatele</string>
+    <string name="search_title_people">Persoane</string>
+    <string name="search_title_recommend">Recomandate</string>
+    <string name="search_title_tag">Obiecte</string>
+  <string name="search_transition_element_icon">search_icon</string>
+  <string name="search_transition_element_input">search_input</string>
     <string name="secret_album_display_name">Album ascuns</string>
     <string name="secret_album_password_first_use_msg">Se va utiliza parola pentru protecția confidențialității. Aceasta este utilizată pentru fotografii, notițe, dosare ascunse, etc.</string>
     <string name="secret_album_password_first_use_title">Parola de protecție a confidențialității</string>
-    <string name="secret_album_password_update_dialog_cancel">Renunțați</string>
     <string name="secret_album_password_update_dialog_msg">Parola de protecție a confidențialității este utilizată pentru fotografii, notițe, dosare ascunse, etc.</string>
-    <string name="secret_album_password_update_dialog_ok">OK</string>
     <string name="secret_album_password_update_dialog_title">Actualizați parola</string>
     <string name="secret_album_password_update_first_user_dialog_msg">Parola de protecție a confidențialității este valabilă pentru aplicații, fotografii, notițe, dosare ascunse, etc.</string>
     <string name="secret_album_password_update_first_user_dialog_title">Actualizați parola</string>
@@ -625,7 +702,12 @@ Faceți mai multe fotografii prietenilor!"</string>
     <string name="sync_battery_low">Acumulator descărcat</string>
     <string name="sync_cloud_space_full">Spaţiu insuficient în Cloud</string>
     <string name="sync_diabled_toast">Sincronizarea este dezactivată</string>
-    <string name="sync_off_button_text">Activați sincronizarea</string>
+    <string name="sync_off_title">Activați sincronizarea cu Mi Cloud pentru a face o copie de rezervă în mod automat pentru fotografii și videoclipuri</string>
+    <string name="sync_pending_title">Se vor sincroniza în mod automat</string>
+    <string name="synced_title">Fotografii și videoclipuri sincronizate cu succes</string>
+    <string name="syncing_gprs_title">Sincronizare utilizând datele mobile</string>
+    <string name="syncing_metadata_title">Se sincronizează datele Mi Cloud</string>
+    <string name="syncing_normal_title">Sincronizare fotografii și videoclipuri</string>
     <string name="system_album">Album de sistem</string>
     <string name="terabyteShort">TB</string>
     <string name="tip_capture_location">Locație:</string>
