--- a/Romanian/main/Mms.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/strings.xml
@@ -389,7 +389,7 @@
     <string name="playing_failed">Nu se poate reda</string>
     <string name="prefDefault_ringtone_repeat">1</string>
     <string name="pref_advanced_settings_title">Setări avansate</string>
-    <string name="pref_allow_network_access_summary">Porniți pentru a obține rapoarte de trimitere și alte servicii.</string>
+    <string name="pref_allow_network_access_summary">Obțineți rapoarte de trimitere actualizate și alte servicii.</string>
     <string name="pref_cell_broadcast">Cell Broadcasts</string>
     <string name="pref_collapse_sp_messages_summary">Grupaţi notificările operatorului în același fir</string>
     <string name="pref_delivery_ringtone">Sunet mesaj trimis</string>
