--- a/Romanian/main/Notes.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Notes.apk/res/values-ro/strings.xml
@@ -16,6 +16,7 @@
     <string name="app_name">Note</string>
     <string name="app_widget">Note</string>
     <string name="call_folder_name">Note apel</string>
+    <string name="cloud_trash_bin_title">Ștergeți notițele din Mi Cloud</string>
     <string name="default_folder_name">Dosar fără nume</string>
     <string name="delete_folder_dialog_tile">Ștergeți dosarul</string>
     <string name="dlg_btn_set_password">Setați parola</string>
@@ -89,10 +90,10 @@
     <string name="permdesc_accessNote">Aplicațiile rău intenționate pot utiliza aceasta pentru a accesa informaţiile personale.</string>
     <string name="permlab_accessNote">Accesare note</string>
     <string name="pref_desc_skip_confirm_for_quick_delete">"Nu arăta fereastra de dialog când se elimină o notiță printr-un gest"</string>
+    <string name="pref_title_cloud_trash_bin">Ștergeți notițele din Mi Cloud</string>
     <string name="pref_title_common">Setări adiţionale</string>
     <string name="pref_title_font_size">Dimensiunea fontului</string>
     <string name="pref_title_note_style">Stil notă</string>
-    <string name="pref_title_recover_help">Recuperați notele</string>
     <string name="pref_title_show_root_folder_in_homepage">Arată doar notițele rapide în pagina principală</string>
     <string name="pref_title_skip_confirm_for_quick_delete">Ștergere rapidă</string>
     <string name="recover_notes_hint">A apărut o eroare; recuperați notițele accesând i.mi.com</string>
@@ -150,6 +151,7 @@
     <string name="toast_reach_text_limit_attachment">Nu puteţi adăuga atașamente noi pentru că nota este prea lungă</string>
     <string name="toast_reach_text_limit_truncate">Această nota este prea lungă. A fost tăiat o parte din textul de la sfârșit.</string>
     <string name="trash_folder_name">Gunoi</string>
+    <string name="trash_folder_reminder">Notițele pe care le ștergeți vor fi eliminate permanent în 30 de zile.</string>
     <string name="undo">Anulaţi</string>
     <string name="unknown_source">Sursă necunoscută</string>
     <string name="welcome_note_for_cm">"Și multe alte caracteristici!
