--- a/Romanian/main/PowerKeeper.apk/res/values-ro/strings.xml
+++ b/Romanian/main/PowerKeeper.apk/res/values-ro/strings.xml
@@ -66,11 +66,25 @@ Economisirea acumulatorului va trata selectiv aplicațiile importante."</string>
     <string name="normal">Mod Prestabilit</string>
     <string name="operation_create_group">Nume</string>
     <string name="operation_create_group_message">Introduceți numele noului grup</string>
+    <string name="power_checker_background_cpu_multi_apps_title">%1$s rulează anormal</string>
+    <string name="power_checker_background_cpu_title">%1$s rulează anormal</string>
+    <string name="power_checker_background_gps_multi_apps_title">%1$s utilizează frecvent localizarea</string>
+    <string name="power_checker_background_gps_title">%1$s utilizează frecvent localizarea</string>
+    <string name="power_checker_mobile_radio_multi_apps_title">%1$s accesează frecvent rețeaua</string>
+    <string name="power_checker_mobile_radio_title">%1$s accesează frecvent rețeaua</string>
+    <string name="power_checker_multi_apps_title">%2$s aplicații consumă energie</string>
+    <string name="power_checker_notify_summary">Eliminați aplicațiile care consumă excesiv energie</string>
+    <string name="power_checker_partial_wakelock_multi_apps_title">%1$s previne intrarea sistemului în standby</string>
+    <string name="power_checker_partial_wakelock_title">%1$s previne intrarea sistemului în standby</string>
     <string name="power_checker_recent_btn_title">Setări acumulator</string>
     <string name="power_checker_recent_group_title">Recent</string>
     <string name="power_checker_running_btn_title">Oprește procesul</string>
     <string name="power_checker_running_group_title">Rulează</string>
     <string name="power_checker_title">PowerChecker</string>
+    <string name="power_checker_wakeup_alarm_multi_apps_title">%1$s trezește frecvent sistemul</string>
+    <string name="power_checker_wakeup_alarm_title">%1$s trezește frecvent sistemul</string>
+    <string name="power_checker_wifi_scan_multi_apps_title">%1$s scanează frecvent rețelele Wi-Fi</string>
+    <string name="power_checker_wifi_scan_title">%1$s scanează frecvent rețelele Wi-Fi</string>
     <string name="power_chooser_user_define_title">Mod nou</string>
     <string name="power_config_alarm_sync_summary">Permiteți trezirea în fundal</string>
     <string name="power_config_alarm_sync_title">Alarmă</string>
