--- a/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityAdd.apk/res/values-ro/strings.xml
@@ -20,8 +20,11 @@
     <string name="game_more_improve">Restricționați activitățile din fundal și viteza de descărcare pentru a economisi acumulatorul și lățimea de bandă pentru jocuri</string>
     <string name="game_setting">Setări jocuri</string>
     <string name="gs_app_back_self_start">Economisire acumulator</string>
+    <string name="gs_auto_clean_memory">Goliți memoria cache</string>
+    <string name="gs_auto_clean_memory_detail">Goliți memoria cache în mod automat pentru a optimiza experiența în jocuri</string>
     <string name="gs_dialog_confirm_close_msg">Scurtătura va fi eliminată de pe ecranul principal. Accesați Securitate-Setări pentru a o restaura.</string>
     <string name="gs_dialog_confirm_close_title">Dezactivați</string>
+    <string name="gs_game_disturb_msg">Nu deranjați</string>
     <string name="gs_game_duration">Timp</string>
     <string name="gs_game_net_priority">Prioritate conexiune</string>
     <string name="gs_game_net_priority_detail">Limitați viteza de descărcare pentru a avea o lățime de bandă suficientă pentru a putea juca</string>
@@ -32,6 +35,7 @@
     <string name="gs_performance_mode_detail">Creșteți utilizarea procesorului pentru a asigura o performanță crescută</string>
     <string name="install_game_count">Au fost adăugate %d jocuri</string>
     <string name="loading">Doar o secundă…</string>
+  <string name="lucky_result_title">roșu de înregistrare Asistent</string>
     <string name="main_toolbar_purchase">Adăugați</string>
     <string name="man_add_application">Adăugați manual aplicațiile cu pornire automată</string>
     <string name="miuishare_title_more">Mai multe</string>
@@ -78,4 +82,6 @@
     <string name="top_game">Jocuri de top</string>
     <string name="uninstall_game_count">"Nu au fost adăugate %d jocuri"</string>
     <string name="usage_sorted_loading_text">Doar o secundă…</string>
+    <string name="wlan_change_protection_detail">"Nu comuta în mod automat pe Wi-Fi atunci când se utilizează datele mobile"</string>
+    <string name="wlan_change_protection_title">Preveniți comutarea între rețele</string>
 </resources>
